# delphi-complier-mcp-server

./: .coverage  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_EN.md  build_project_kb.py  debug_kb.py  fix_incremental_build.py  install.bat  install.ps1  install_mcp.py  opencode.json  pyproject.toml  requirements.txt  uninstall.bat
.omo/plans/: dproj-create-summary.md
.omo/run-continuation/: ses_1897e76aeffeV477F47b0b0OFg.json
config/: CODING_RULES.mdc  history.json  logging_config.json
data/document-knowledge-base/: documents.sqlite
data/thirdparty-knowledge-base/: thirdparty_metadata.json  thirdparty_paths.json
data/thirdparty-knowledge-base/index/: metadata.json  source_index.json  thirdparty_paths.json
docs/: CODING_RULES_USAGE.md  DEPLOYMENT.md  INTEGRATION_TEST_REPORT.md  KNOWLEDGE_BASE_INTEGRATION.md  KNOWLEDGE_BASE_QUICKSTART.md  ast-audit-engine-spec.md  automate_test_guide.md  delphi_file.md  experience-knowledge-base.md  roadmap-creative.md  tutorial_script.md
docs/tutorial/: README.md  tutorial_script.md
docs/tutorial/automate-test/: AutoTest.dpr  AutoTest.dproj  DaofyAutomation.pas  Fmx3DMainForm.pas  Fmx3DTest.dpr  Fmx3DTest.dproj  FmxAutoTest.dpr  FmxAutoTest.dproj  FmxMainForm.pas  MainForm.pas  test_all_commands.py  test_capture_all.py  test_dlgclick_msgbox.py  test_json_protocol.py
docs/tutorial/slides/: index.html  slides.md
scripts/: build_postgresql_full.py  build_postgresql_kb.py  crawl_postgresql_docs.py
src/: __version__.py  server.py
src/config/: compilers.json  history.json  tool_docs.py
src/models/: command_args.py  compile_history.py  compile_request.py  compile_result.py  compiler_config.py
src/rules/: runtime_registry.json
src/services/: args_generator.py  automation_service.py  compiler_service.py  config_manager.py  experience_service.py  process_manager.py
src/services/knowledge_base/: __init__.py  async_task_manager.py  embedding_service.py  fts5_lazy_manager.py  help_knowledge_base.py  pdf_processor_example.py  project_knowledge_base.py  scan_delphi_sources.py  scan_delphi_sources.py.backup  scan_generic_documents.py  schema.py  service.py  smart_cache_knowledge_base.py  sqlite_vector_query_knowledge_base.py  thirdparty_knowledge_base.py
src/tools/: __init__.py  analyze_dependencies.py  async_tasks.py  audit.py  code_hosting.py  coding_rules.py  compile_file.py  compile_project.py  config.py  dfm_utils.py  document_kb_tools.py  environment.py  experience.py  file_tool.py  get_args.py  help_knowledge_base.py  install_package.py  knowledge_base.py  pasfmt.py  project_kb_worker.py  project_knowledge_base.py  read_source_file.py  thirdparty_knowledge_base.py
src/utils/: __init__.py  delphi_env.py  delphi_versions.py  dproj_parser.py  dynamic_worker_optimizer.py  file_backup.py  logger.py  parser.py  progress_tracker.py  unit_dependency_analyzer.py  validator.py
tests/: run_all_tests.bat  run_all_tests.py  test_batch_write_bugs.py  test_code_hosting.py  test_coding_rules.py  test_compiler_service.py  test_config_manager.py  test_config_usage.py  test_delphi_versions.py  test_dfm_utils.py  test_document_async.py  test_document_kb.py  test_document_multiprocess.py  test_dproj_parser.py  test_edge_cases.py  test_environment.py  test_file_backup.py  test_file_tool.py  test_git_status.py  test_install_logic.py  test_kb_service_extended.py  test_knowledge_base.py  test_mcp_e2e.py  test_mcp_tools.py  test_multi_write_offset.py  test_process_manager.py  test_sqlite_vector_knowledge_base.py  test_thirdparty_kb_full.py  test_validator.py
tools/auto/: DaofyAutomation.Base.pas  Fmx.DaofyAutomation.pas  Vcl.DaofyAutomation.pas
